--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 
 </head>
 
-<body class="text-yellow-100">
+<body class="text-red-100">
     <!-- content wrapper -->
     <div>
         <div>
             <nav>
                 <div>
-                    <h1>
+                    <h1 class="text-red">
                         <!-- This will link back to the home page -->
                         <a href="/">Food Ninja</a>
                     </h1>
