--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="text-center">
+                    <h1 class="text-orange-400">
                         <!-- This will link back to the home page -->
                         <a href="/">Food Ninja</a>
                     </h1>
@@ -83,6 +83,9 @@
 
 
     </div>
+
+    <script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3002/browser-sync/browser-sync-client.js?v=2.27.10'><\/script>".replace("HOST", location.hostname));//]]> </script>
 
 </body>
 
